--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,30 +1,71 @@
+body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+  flex: 1 0 auto;
+}
+.logo {
+  font-size: 15px;
+  text-align: left;
+  flex-direction: column;
+}
 #background {
-    background-color: rgb(231, 232, 233);
+  background-color: lightgoldenrodyellow;
+  background-image: url("Assets/Images/backgroundPineapple.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  background-blend-mode: soft-light;
+  width: auto;
+  height: auto;
+}
+  .slider .btn {
+    margin-top: 20px;
   }
-  
-  .header {
-    font-family: "Sriracha", cursive;
-    font-weight: 800;
-    font-size: 90px;
-    text-align: center;
-    color: rgb(31, 30, 30);
-  }
-  
-  .img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35%;
-    height: 28%;
-  }
-  
-  .lead {
-    font-family: "Open Sans", sans-serif;
-    text-align: center;
-  }
-  
-  .dest {
-    font-family: "Open Sans", sans-serif;
-    font-size: medium;
-    color: rgb(34, 33, 33);
-  }
+#img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width:30em;
+  height:20em;
+}
+.lead  {
+  font-family: "Open Sans", sans-serif;
+  text-align: right;
+  font-size: 15px;
+  font-style: italic;
+  color: rgb(234, 241, 243);
+}
+.dest {
+  font-family: "Open Sans", sans-serif;
+  font-size: 25px;
+  color: rgb(34, 33, 33);
+}
+#yelpArea {
+  display: center;
+}
+.rev {
+  font-family: "Sriracha", cursive;
+  font-weight: 500;
+  font-size: 30px;
+  text-align: center;
+  color: rgb(31, 30, 30);
+}
+#videoHeader {
+  font-family: "Sriracha", cursive;
+  font-weight: 500;
+  font-size: 30px;
+  text-align: center;
+  color: rgb(31, 30, 30);
+}
+
+footer{
+
+  background-color: teal;
+  text-align: center;
+  color: white;
+  font-family: "Open Sans", sans-serif;
+  width: 100%;
+}
