--- a/Assets/style.css
+++ b/Assets/style.css
@@ -64,6 +64,10 @@ main {
   text-align: left;
   color: rgb(31, 30, 30);
 }
+#instructions {
+  font-family: "Sriracha", cursive;
+  font-size: 18px;
+}
 #videoHeader {
   font-family: "Sriracha", cursive;
   font-weight: 500;
